syntax = "proto3";
option go_package = "./pb";

enum RoomType {
    ROOM_TYPE_UNSPECIFIED = 0;
    ROOM_TYPE_STANDARD = 1;
    ROOM_TYPE_LOBBY = 2;
}

message Room {
    RoomType type = 3;
    string id = 1;
    uint64 expiry = 2;
}